fixed heading in hero alignment

--- a/_sass/sections/_hero.scss
+++ b/_sass/sections/_hero.scss
@@ -24,6 +24,7 @@
 }
 
 .hero-container h1 {
+  text-align: left;
   margin: 1rem 0;
 
   max-width: 42rem;
